infra/manifests/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: web
spec:
  # Nombre del servicio
  host: web.default.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: web
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
      ### others algorithms
      # - ROUND_ROBIN
      # - LEAST_CONN
      # - RANDOM
      # - PASSTHOUGH
