infra/manifests/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ecommerce-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        # Puerto del api gateway
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web
spec:
  hosts:
    - "*"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: web.default.svc.cluster.local
            port:
              number: 80
      timeout: 5s
